# fazrepo

./: .gitignore  .npmrc  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE  Makefile  Makefile.new  PROJECT_SUMMARY.md  README.md  SETUP_GUIDE.md  WINDOWS.md  WINDOWS_DEV.md  WINDOWS_IMPLEMENTATION.md  install-dev.sh  install.ps1  install.sh  package-lock.json  package.json  pnpm-lock.yaml  release.sh  setup-dev.sh  setup.sh  turbo.json
.github/workflows/: ci.yml  release.yml
apps/cli/: Cargo.toml  package.json
apps/cli/src/: main.rs
apps/cli/src/commands/: check_command.rs  create_command.rs  init_command.rs  list_command.rs  mod.rs  version_command.rs
apps/cli/src/models/: config.rs  mod.rs  package_manager.rs  project.rs
apps/cli/src/services/: config_service.rs  mod.rs  output_service.rs  package_manager_service.rs  project_service.rs
apps/cli/src/utils/: constants.rs  helpers.rs  mod.rs
apps/cli/templates/api-express/: README.md  package.json
apps/cli/templates/fullstack-nextjs/: README.md  package.json
apps/docs/: next.config.js  package.json  tailwind.config.js  theme.config.jsx
apps/docs/pages/: download.mdx  example.mdx  index.mdx
apps/web/: next.config.js  package.json  tailwind.config.js  tsconfig.json
apps/web/app/: layout.tsx  page.tsx
homebrew-fazrepo/Formula/: fazrepo.rb
release-assets/: fazrepo-linux-x86_64
scripts/: package-release.sh  release.sh  setup-dev.sh  setup.sh  test-install.sh  test-release.sh  update-version.sh
src/: main.rs
tests/: integration_tests.rs
