[package]
name = "fazrepo"
version = "0.2.0"
edition = "2021"
description = "A CLI tool to check package manager versions"
license = "MIT"
authors = ["Your Name <your.email@example.com>"]
homepage = "https://github.com/avadakedavra-wp/fazrepo"
repository = "https://github.com/avadakedavra-wp/fazrepo"
keywords = ["cli", "package-manager", "npm", "yarn", "pnpm", "bun"]
categories = ["command-line-utilities"]

[[bin]]
name = "fazrepo"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
colored = "2.0"
which = "4.4"
